# rusk

./: .gitignore  Cargo.toml  README.md  RECURRENCE_GUIDE.md  SETUP.md  config.toml
.github/workflows/: coverage.yml
crates/rusk-cli/: Cargo.toml
crates/rusk-cli/src/: cli.rs  config.rs  filter.pest  filter.rs  main.rs  parser.rs  query_parser.rs  timezone.rs  util.rs
crates/rusk-cli/src/commands/: add.rs  cancel.rs  delete.rs  do.rs  edit.rs  list.rs  mod.rs  project.rs  recurrence.rs
crates/rusk-cli/src/views/: mod.rs  table.rs
crates/rusk-cli/tests/: cli_integration_tests.rs
crates/rusk-cli/tests/helpers/: mod.rs
crates/rusk-core/: Cargo.toml
crates/rusk-core/benches/: recurrence_benchmarks.rs  repository_benchmarks.rs  simple_benchmarks.rs
crates/rusk-core/migrations/: 20250816000000_series_schema.down.sql  20250816000000_series_schema.up.sql
crates/rusk-core/src/: error.rs  lib.rs  models.rs  query.rs  recurrence.rs  repository.rs  timezone.rs
crates/rusk-core/src/repository/: exceptions.rs  materialization.rs  mod.rs  projects.rs  query_builder.rs  series.rs  tasks.rs
crates/rusk-core/tests/: integration_tests.rs  recurrence_tests.rs
crates/task-cli/: Cargo.toml
crates/task-cli/src/: cli.rs  config.rs  filter.rs  main.rs  util.rs
crates/task-cli/src/commands/: add.rs  cancel.rs  delete.rs  do.rs  edit.rs  list.rs  project.rs
crates/task-cli/src/views/: table.rs
crates/task-core/: Cargo.toml
crates/task-core/migrations/: 20250807121500_initial_schema.down.sql  20250807121500_initial_schema.up.sql
crates/task-core/src/: db.rs  error.rs  lib.rs  recurrence.rs  repository.rs
crates/task-core/tests/: integration_tests.rs  recurrence_tests.rs
scripts/: bench.sh  coverage.sh  setup-coverage.sh  test-summary.sh
