[workspace]
members = [
    "crates/rusk-core",
    "crates/rusk-cli",
]
resolver = "2"

[workspace.dependencies]
# Core and data
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# CLI and TUI
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ratatui = "0.26"
owo-colors = "4.0"
indicatif = "0.17"
figment = { version = "0.10", features = ["toml", "env"] }

# Testing and development
tokio-test = "0.4"
rstest = "0.18"
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
fastrand = "2.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Test profiles for coverage and benchmarking
[profile.test]
debug = true

[profile.bench]
debug = true

# Coverage configuration
# Use: cargo llvm-cov --html --open
# Install: cargo install cargo-llvm-cov