[package]
name = "rusk-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
chrono-humanize = "0.2"
clap = { version = "4.0", features = ["derive"] }
comfy-table = "7.0"
dialoguer = "0.11"
owo-colors = "4.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.4.0"
thiserror = "1.0"

rusk-core = { path = "../rusk-core" }