[package]
name = "rusk-cli"
version = "0.1.0"
edition = "2021"
authors = ["Rusk Development Team"]
description = "A feature-rich, high-quality, robust CLI task management tool with advanced recurring task support"
license = "MIT OR Apache-2.0"
readme = "../../README.md"
homepage = "https://github.com/rusk-task-manager/rusk"
repository = "https://github.com/rusk-task-manager/rusk"
keywords = ["cli", "task", "management", "productivity", "todo"]
categories = ["command-line-utilities", "productivity"]

[[bin]]
name = "rusk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
chrono-humanize = "0.2"
chrono-tz = "0.9.0"
clap = { version = "4.0", features = ["derive"] }
comfy-table = "7.0"
dialoguer = "0.11"
iana-time-zone = "0.1"
owo-colors = "4.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3", features = ["v4", "serde", "v7"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.4.0"
thiserror = "1.0"

rusk-core = { path = "../rusk-core" }

[dev-dependencies]
tokio-test = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }