[package]
name = "task-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
chrono-tz = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "macros"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde", "v7"] }
serde_with = "3.8.1"
tokio = { version = "1", features = ["full"] }
rrule = "0.10.0"